@@ -56,7 +56,7 @@
     --long_long:                 enable long long support if C++ mode
     --variadics:                 enable variadics and placemarkers in C++ mode
     --c99:                       enable C99 mode (implies variadics and placemarkers)
-    --c++0x                      enable C++0x mode (implies --variadics and --long_long)
+    --c++11                      enable C++11 mode (implies --variadics and --long_long)
     -l [ --listincludes ] arg:   list included file to a file [arg] or to stdout [-]
     -m [ --macronames ] arg:     list names of all defined macros to a file [arg] or 
                                  to stdout [-]
@@ -192,9 +192,9 @@
     about predefined macros you may look <a href="predefined_macros.html">here</a>. 
   </p>
 </blockquote>
-<p dir="ltr">--c++0x</p>
+<p dir="ltr">--c++11</p>
 <blockquote>
-  <p dir="ltr">Enable the C++0x mode. This mode enables C++0x specific keywords and features, such
+  <p dir="ltr">Enable the C++11 mode. This mode enables C++11 specific keywords and features, such
     as variadics (macros with variable parameter lists), placemarkers (empty macro 
     arguments) and <tt>operator&nbsp;_Pragma</tt> support. 
     Several predefined macros are different for this mode, for more information 
